--- a/css/menu.css
+++ b/css/menu.css
@@ -44,7 +44,7 @@
   max-height: 100%;
 }
 @media screen and (max-height: 420px){
-  #Menu{
+  #Menu:hover{
     overflow-y: scroll;
   }
 }
